// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportViewer when the report contains errors should print the same report 1`] = `
" 
Previewing resource changes:
 ──────────────────────────── 
    Extensions                
 +   1 to create              
 -   2 to delete              
                              
    Fields                    
 !   7 in error               
 ~   1 to update              
                              
Error Report:
   7 resources in error 

 Fields
  • RESOURCE_ALREADY_EXISTS: Field foo already exists.
  • RESOURCE_ALREADY_EXISTS: Field bar already exists.
  • RESOURCE_ALREADY_EXISTS: Field dsads already exists.
  • RESOURCE_ALREADY_EXISTS: Field fdww already exists.
  • RESOURCE_ALREADY_EXISTS: Field csad already exists.
  (2 more errors)

"
`;

exports[`ReportViewer when the report contains missing vault entries should print the same report 1`] = `
" 
Previewing resource changes:
 ──────────────────────────── 
    Extensions                
 +   1 to create              
 -   2 to delete              
                              
    Fields                    
 !   7 in error               
 ~   1 to update              
                              
Missing vault entries in destination organization:
  • foo_4VNj5ds5-configuration.userIdentities.UserIdentity.password
  • bar_4VNj5ds5-configuration.userIdentities.UserIdentity.password
  • dsads_4VNj5ds5-configuration.userIdentities.UserIdentity.password
  • fdww_4VNj5ds5-configuration.userIdentities.UserIdentity.password
  • csad_4VNj5ds5-configuration.userIdentities.UserIdentity.password
  (2 more entries)
"
`;

exports[`ReportViewer when the report contains no changes should show that no changes were detected 1`] = `
"
No changes detected
No resources to change.

The target organization already matches the configuration.
"
`;

exports[`ReportViewer when the report does not contain errors should print resource changes 1`] = `
" 
Previewing resource changes:
 ──────────────────────────── 
    Extensions                
 +   1 to create              
 -   2 to delete              
 ~   1 to update              
                              
    Fields                    
 ~   1 to update              
                              
"
`;
